# t-shirt-discord-bot

./: .coverage  .dockerignore  .env.example  BUILD_FIX_SUMMARY.md  CHECKLIST.md  DESIGN_TRACKING_SUMMARY.md  Dockerfile  FINAL_FIX_SUMMARY.md  FIXES_APPLIED.md  IMPORT_FIX.md  MIGRATION_INSTRUCTIONS.md  MIGRATION_SUMMARY.md  PRODIGI_MIGRATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TESTING_QUICKSTART.md  cloudbuild.yaml  coverage.xml  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh
.cursor/rules/: printify-api.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-check.yml  test-build.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_TRACKING.md  GITHUB_ACTIONS.md  PRINTIFY_MIGRATION_SUMMARY.md  PRINTIFY_TESTING.md  PRODIGI_MIGRATION.md  README.md  SETUP.md  TESTING.md
scripts/: quick_test_printify.py  test_printify_api.py
src/: __init__.py  config.py  main.py
src/bot/: discord_bot.py
src/services/: __init__.py  design_generator.py  llm_parser.py  orchestrator.py  printful_client.py  printify_client.py  prodigi_client.py  teemill_client.py
tests/: __init__.py  conftest.py  test_config.py  test_design_generator.py  test_design_tracking.py  test_discord_bot.py  test_llm_parser.py  test_orchestrator.py  test_printful_client.py  test_printify_client.py  test_prodigi_client.py  test_teemill_client.py
tests/integration/: __init__.py  test_full_workflow.py  test_printify_integration.py
