[project]
name = "discord-tshirt-bot"
version = "0.1.0"
description = "Discord bot for creating and fulfilling custom t-shirts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.2",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langsmith>=0.1.0",
    "pillow>=10.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.1",
    "ruff>=0.1.9",
]
